fix bookmarks alignment issue

--- a/src/dpr/components/bookmark-toggle/style.scss
+++ b/src/dpr/components/bookmark-toggle/style.scss
@@ -97,8 +97,8 @@
 }
 
 .dpr-bookmark-tooltip.dpr-bookmark-table:hover:after {
-  left: 76px;
-  top: -10px;
+    left: 76px;
+    top: -10px;
 }
 
 .dpr-bookmark-tooltip.dpr-bookmark-table:hover:before {
@@ -108,6 +108,10 @@
 
 .dpr-vertical-align {
   vertical-align: middle;
+}
+
+.dpr-bookmark-head {
+  width: 89px;
 }
 
 .dpr-bookmark-tooltip:hover:before{
